Mindre refaktoreringer av regelflyt